--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,20 @@
+argon2-cffi==19.1.0
+bcrypt==3.1.6
+cffi==1.12.3
 dj-database-url==0.5.0
+Django==2.2.1
+django-bootstrap3==11.0.0
+django-bootstrap4==0.0.8
+django-braces==1.13.0
+Faker==1.0.7
 gunicorn==19.9.0
 Pillow==6.0.0
-python-decouple==3.1
+psycopg2==2.8.2
+pycparser==2.19
+python-dateutil==2.8.0
+pytz==2019.1
+six==1.12.0
+sqlparse==0.3.0
+text-unidecode==1.2
 whitenoise==4.1.2
+python-decouple==3.1
