--- a/requirements.txt
+++ b/requirements.txt
@@ -8,21 +8,19 @@ autoenv==1.0.0
 backcall==0.1.0
 beautifulsoup4==4.7.1
 bleach==3.1.0
-Brlapi==0.6.6
 cairocffi==1.0.2
 CairoSVG==2.4.0
 certifi==2018.11.29
 cffi==1.12.3
 chardet==3.0.4
 Click==7.0
-command-not-found==0.3
 contextlib2==0.5.5
+coverage
 cryptography==2.1.4
 cssselect2==0.2.1
 cycler==0.10.0
 Cython==0.29.5
 decorator==4.3.2
-defer==1.0.6
 defusedxml==0.5.0
 dj-database-url==0.5.0
 Django==2.1.7
@@ -58,9 +56,7 @@ Keras-Preprocessing==1.0.9
 keyring==10.6.0
 keyrings.alt==3.0
 kiwisolver==1.0.1
-language-selector==0.1
 lazy-object-proxy==1.3.1
-louis==3.5.0
 Mako==1.0.7
 Markdown==3.0.1
 MarkupSafe==1.1.1
@@ -72,10 +68,10 @@ nbconvert==5.4.1
 nbformat==4.4.0
 netifaces==0.10.4
 nltk==3.4
+nose==1.3.3
 notebook==5.7.4
 numpy==1.16.2
 olefile==0.45.1
-onboard==1.4.1
 opencv-python==4.0.0.21
 pandocfilters==1.4.2
 parso==0.3.4
@@ -93,13 +89,11 @@ pycairo==1.16.2
 pycparser==2.19
 pycrypto==2.6.1
 Pygments==2.3.1
-pygobject==3.26.1
 pylint==2.3.1
 pyparsing==2.3.1
+pyPdf2==1.26
 Pyphen==0.9.5
 pyrsistent==0.14.11
-python-apt===1.6.4-elementary6-ubuntu5.0.1
-python-dateutil==2.8.0
 python-debian==0.1.32
 python-decouple==3.1
 python-editor==1.0.4
@@ -116,10 +110,9 @@ Send2Trash==1.5.0
 singledispatch==3.4.0.3
 six==1.12.0
 soupsieve==1.8
+Sphinx==1.4.8
+sphinx-rtd-theme==0.1.9
 SQLAlchemy==1.2.18
-tensorboard==1.13.0
-tensorflow==1.13.1
-tensorflow-estimator==1.13.0
 termcolor==1.1.0
 terminado==0.8.1
 testpath==0.4.2
@@ -127,17 +120,13 @@ tinycss2==1.0.2
 tornado==5.1.1
 traitlets==4.3.2
 typed-ast==1.2.0
-ubuntu-drivers-common==0.0.0
-ufw==0.36
 urllib3==1.24.1
-vboxapi==1.0
 virtualenv==16.4.3
 virtualenv-clone==0.5.1
 wcwidth==0.1.7
-WeasyPrint==47
 webencodings==0.5.1
 Werkzeug==0.14.1
 whitenoise==4.1.2
 widgetsnbextension==3.4.2
 wrapt==1.11.1
-xkit==0.0.0
+xhtml2pdf==0.2.3
