--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,132 @@
-argon2-cffi==19.1.0
-bcrypt==3.1.6
+absl-py==0.7.0
+alembic==1.0.7
+asn1crypto==0.24.0
+astor==0.7.1
+astroid==2.2.3
+attrs==18.2.0
+autoenv==1.0.0
+backcall==0.1.0
+beautifulsoup4==4.7.1
+bleach==3.1.0
+cairocffi==1.0.2
+CairoSVG==2.4.0
+certifi==2018.11.29
 cffi==1.12.3
+chardet==3.0.4
+Click==7.0
+contextlib2==0.5.5
+coverage
+cryptography==2.1.4
+cssselect2==0.2.1
+cycler==0.10.0
+Cython==0.29.5
+decorator==4.3.2
+defusedxml==0.5.0
 dj-database-url==0.5.0
-Django==2.2.1
-django-bootstrap3==11.0.0
-django-bootstrap4==0.0.8
-django-braces==1.13.0
-Faker==1.0.7
+Django==2.1.7
+django-cors-headers==2.4.1
+django-pdf-generator==0.1.3
+entrypoints==0.3
+Flask==1.0.2
+Flask-Migrate==2.4.0
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
+gast==0.2.2
+grpcio==1.19.0
 gunicorn==19.9.0
+h5py==2.9.0
+html5lib==1.0.1
+httplib2==0.9.2
+idna==2.8
+ipykernel==5.1.0
+ipython==7.3.0
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
+isort==4.3.10
+itsdangerous==1.1.0
+jedi==0.13.3
+Jinja2==2.10
+jsonschema==3.0.0
+jupyter==1.0.0
+jupyter-client==5.2.4
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+Keras-Applications==1.0.7
+Keras-Preprocessing==1.0.9
+keyring==10.6.0
+keyrings.alt==3.0
+kiwisolver==1.0.1
+lazy-object-proxy==1.3.1
+Mako==1.0.7
+Markdown==3.0.1
+MarkupSafe==1.1.1
+matplotlib==3.0.2
+mccabe==0.6.1
+mistune==0.8.4
+mock==2.0.0
+nbconvert==5.4.1
+nbformat==4.4.0
+netifaces==0.10.4
+nltk==3.4
+nose==1.3.3
+notebook==5.7.4
+numpy==1.16.2
+olefile==0.45.1
+opencv-python==4.0.0.21
+pandocfilters==1.4.2
+parso==0.3.4
+pbr==5.1.2
+pexpect==4.6.0
+pickleshare==0.7.5
 Pillow==6.0.0
-psycopg2==2.8.2
+pipenv==2018.11.26
+prometheus-client==0.6.0
+prompt-toolkit==2.0.9
+protobuf==3.6.1
+psycopg2==2.7.7
+ptyprocess==0.6.0
+pycairo==1.16.2
 pycparser==2.19
-python-dateutil==2.8.0
-pytz==2019.1
-six==1.12.0
-sqlparse==0.3.0
-text-unidecode==1.2
-whitenoise==4.1.2
+pycrypto==2.6.1
+Pygments==2.3.1
+pylint==2.3.1
+pyparsing==2.3.1
+pyPdf2==1.26
+Pyphen==0.9.5
+pyrsistent==0.14.11
+python-debian==0.1.32
 python-decouple==3.1
-dropbox==9.3.0
-django-storages==1.7.1
+python-editor==1.0.4
+pytz==2018.9
+pyxdg==0.25
+PyYAML==3.12
+pyzmq==18.0.0
+qtconsole==4.4.3
+reportlab==3.4.0
+requests==2.21.0
+requests-unixsocket==0.1.5
+SecretStorage==2.3.1
+Send2Trash==1.5.0
+singledispatch==3.4.0.3
+six==1.12.0
+soupsieve==1.8
+Sphinx==1.4.8
+sphinx-rtd-theme==0.1.9
+SQLAlchemy==1.2.18
+termcolor==1.1.0
+terminado==0.8.1
+testpath==0.4.2
+tinycss2==1.0.2
+tornado==5.1.1
+traitlets==4.3.2
+typed-ast==1.2.0
+urllib3==1.24.1
+virtualenv==16.4.3
+virtualenv-clone==0.5.1
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.14.1
+whitenoise==4.1.2
+widgetsnbextension==3.4.2
+wrapt==1.11.1
+xhtml2pdf==0.2.3
