--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,9 @@ defusedxml==0.5.0
 dj-database-url==0.5.0
 Django==2.1.7
 django-cors-headers==2.4.1
+django_heroku
 django-pdf-generator==0.1.3
+python-dotenv
 entrypoints==0.3
 Flask==1.0.2
 Flask-Migrate==2.4.0
